syntax = "proto3";

package auth;
option go_package = "user_service/protos";

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
  }


message LoginRequest {
    string username = 1;
    string password = 2;
    string type = 3;  // "Admin" hoặc "Teacher"
  }
  
  message LoginResponse {
    string token = 1;
    string message = 2;  // Có thể là một lời chào, như "Hello, [name]"
  }